# pleiades-agents

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
adapters/claude-skill/: README.md  generate-skills.py
adapters/gemini-cli/: README.md  invoke-agent.sh
adapters/mcp-server/: README.md
agents/api-designer/: AGENT.md  config.yaml
agents/api-documenter/: AGENT.md  config.yaml
agents/architecture-designer/: AGENT.md  config.yaml
agents/automation-architect/: AGENT.md  config.yaml
agents/branch-manager/: AGENT.md  config.yaml
agents/changelog-generator/: AGENT.md  config.yaml
agents/ci-debugger/: AGENT.md  config.yaml
agents/code-reviewer/: AGENT.md  config.yaml
agents/commit-writer/: AGENT.md  config.yaml
agents/config-generator/: AGENT.md  config.yaml
agents/deduplication-engine/: AGENT.md  config.yaml
agents/dependency-analyzer/: AGENT.md  config.yaml
agents/dependency-updater/: AGENT.md  config.yaml
agents/docker-composer/: AGENT.md  config.yaml
agents/documentation-strategist/: AGENT.md  config.yaml
agents/documentation-writer/: AGENT.md  config.yaml
agents/env-validator/: AGENT.md  config.yaml
agents/git-history-rewriter/: AGENT.md  config.yaml
agents/incident-commander/: AGENT.md  config.yaml
agents/incident-responder/: AGENT.md  config.yaml
agents/infrastructure-auditor/: AGENT.md  config.yaml
agents/integration-orchestrator/: AGENT.md  config.yaml
docs/: SCHEMA.md
orchestrator/: delegation-patterns.md  routing.md
scripts/: migrate_guardians.py  migrate_skills.py
tests/: validate_agents.py
(+46 files in other folders)
