[project]
name = "pleiades-agents"
version = "0.1.0"
description = "Unified AI agent architecture for Claude and Gemini CLI"
readme = "README.md"
authors = [{ name = "freddieweir", email = "27744739+freddieweir@users.noreply.github.com" }]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
pleiades = "adapters.mcp_server:main"
